--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ docs/html/
 
 #Apple file
 .DS_Store
+.vscode/.cortex-debug.peripherals.state.json
+.vscode/.cortex-debug.peripherals.state.json
+.gitignore
