--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -31,22 +31,22 @@
         },
       },
       {
-        "name": "Debug device STM32F411RE",
+        "name": "Debug device STM32F411E",
         "cwd": "${workspaceRoot}", 
         "executable": "${workspaceFolder}/output/${workspaceFolderBasename}.elf",
         "request": "launch",
         "runToEntryPoint": "main",
         "type": "cortex-debug",
         "servertype": "openocd",
-        "device": "STM32F411RE",        
+        "device": "STM32F411E",        
         "configFiles": [
-          "port/nucleo_stm32f411re/openocd.cfg"
+          "port/nucleo_stm32f411e/openocd.cfg"
         ],
-        "preLaunchTask": "Clean & Re-Build NUCLEO_STM32F411RE",
+        "preLaunchTask": "Clean & Re-Build NUCLEO_STM32F411E",
         "svdFile": "../../svd/STM32F411.svd",
         "swoConfig": {
           "enabled": true,
-          "cpuFrequency": 16000000,
+          "cpuFrequency": 100000000,
           "swoFrequency": 2000000,
           "source": "probe",
           "decoders": [
